@@ -39,6 +39,29 @@ jobs:
         mkdir /opt/hbpk
         echo verbose=off > $HOME/.wgetrc
 
+    - name: Get previous successful run ID
+      id: get_run
+      continue-on-error: true
+      run: |
+        cd hbpksrc
+        # ignore artifacts, when a forced rebuild goes
+        if ! git log --oneline -n1 | grep -Fq "[corebuild]"; then
+          PREV_RUN_ID=$(gh run list --workflow="${{ github.workflow }}" --limit=1 --status=success --json databaseId -q '.[0].databaseId')
+          echo "Previous successful run ID: $PREV_RUN_ID"
+          echo "run_id=$PREV_RUN_ID" >> $GITHUB_OUTPUT
+        fi
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Get previously built packages
+      continue-on-error: true
+      uses: actions/download-artifact@v4
+      with:
+        name: packages-x86_64-windows-gnu
+        path: packages-x86_64-windows-gnu-last
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        run-id: ${{ steps.get_run.outputs.run_id }}
+
     - name: Build base of hbpk
       shell: msys2 {0}
       run: |
@@ -57,14 +80,23 @@ jobs:
       shell: msys2 {0}
       run: |
         export PATH="/opt/hbpk/bin:/opt/hbpk/harbour/bin/win/zig:$PATH"
-        cd hbpksrc/build
-        PKGSELECTION=zig-binary make install
-        PKGSELECTION=harbour-core make install
-        cd harbour-core-onedir
-        mv ../harbour-core/harbour-* ./ # only redo the install
-        touch .config .depend .extract .fetch .patch
-        cd ..
-        PKGSELECTION=harbour-core-onedir make install
+        if [ -d "packages-x86_64-windows-gnu-last" ]; then
+          mv packages-x86_64-windows-gnu-last/harbour-core*.hbpk hbpksrc/packages/
+          mv packages-x86_64-windows-gnu-last/zig*.hbpk hbpksrc/packages/
+          cd hbpksrc/packages
+          hbpk-add zig*.hbpk
+          hbpk-add harbour-core*onedir.hbpk
+          cd ../build
+        else
+          cd hbpksrc/build
+          PKGSELECTION=zig-binary make install
+          PKGSELECTION=harbour-core make install
+          cd harbour-core-onedir
+          mv ../harbour-core/harbour-* ./ # only redo the install
+          touch .config .depend .extract .fetch .patch
+          cd ..
+          PKGSELECTION=harbour-core-onedir make install
+        fi
         PKGSELECTION=" \
           letodbf-server-elch \
           letodbf-server-alcz \
